[tool.poetry]
name = "noti-api"
version = "0.1.0"
description = ""
authors = ["well-balanced <ws.kim@specupad.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
